--- a/Assignment6/Assignment6.csproj
+++ b/Assignment6/Assignment6.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Account.cs" />
     <Compile Include="CheckingAccount.cs" />
     <Compile Include="SavingsAccount.cs" />
+    <Compile Include="NegativeNumberException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
